# glm_plus

./: .gitignore  CMakeLists.txt  README.md
glm_plus/: CMakeLists.txt  line.cpp  line.h  matrix.h  types.h  util.h  vector.h
tests/: CMakeLists.txt  assertions.h  line.cpp  matrix.cpp  types.cpp  vector.cpp
